--- a/WWW.com/Index.html
+++ b/WWW.com/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S_i_S</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/WWW.com/css/main.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                 <button class="btn">Get more details</button>
             </div>
-            <img src="img/joystick.svg" alt="">
+            <img src="/WWW.com/img/joystick.svg" alt="">
         </div>
 
         <div class="container trending">
@@ -40,20 +40,20 @@
 
             <div class="games">
                 <div class="block">
-                    <img src="/img/game1.png" alt="">
-                    <span><img src="/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="/WWW.com/img/game1.png" alt="">
+                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/img/game2.png" alt="">
-                    <span><img src="/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="/WWW.com/img/game2.png" alt="">
+                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/img/game3.png" alt="">
-                    <span><img src="/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="/WWW.com/img/game3.png" alt="">
+                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/img/game4.png" alt="">
-                    <span><img src="/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="/WWW.com/img/game4.png" alt="">
+                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="container banner">
             <h3>Lorem Ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-            <img src="/img/banner.png" alt="">
+            <img src="/WWW.com/img/banner.png" alt="">
         </div>
     </div>
     
@@ -74,34 +74,34 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
             <div class="info">
                 <div class="block">
-                    <img src="/img/feature1.png" alt="">
+                    <img src="/WWW.com/img/feature1.png" alt="">
                     <p>Mobile Game Development</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
                 <div class="block">
-                    <img src="/img/feature2.png" alt="">
+                    <img src="/WWW.com/img/feature2.png" alt="">
                     <p>PC Game Development</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
                 <div class="block">
-                    <img src="/img/feature3.png" alt="">
+                    <img src="/WWW.com/img/feature3.png" alt="">
                     <p>PS4 Game Development</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
                 <div class="block">
-                    <img src="/img/feature4.png" alt="">
+                    <img src="/WWW.com/img/feature4.png" alt="">
                     <p>AR/VR Solutions</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
                 <div class="block">
-                    <img src="/img/feature5.png" alt="">
+                    <img src="/WWW.com/img/feature5.png" alt="">
                     <p>AR/ VR design</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
                 <div class="block">
-                    <img src="/img/feature6.png" alt="">
+                    <img src="/WWW.com/img/feature6.png" alt="">
                     <p>3D Modelings</p>
-                    <img src="/img/arrow.png" alt="">
+                    <img src="/WWW.com/img/arrow.png" alt="">
                 </div>
             </div>
         </div>
@@ -112,18 +112,67 @@
             <h3>Our Recent Projects</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             <div class="images">
-                <img src="/img/projects1.png" alt="">
-                <img src="/img/projects2.png" alt="">
-                <img src="/img/projects3.png" alt="">
+                <img src="/WWW.com/img/projects1.png" alt="">
+                <img src="/WWW.com/img/projects2.png" alt="">
+                <img src="/WWW.com/img/projects3.png" alt="">
             </div>
             <div class="images">
-                <img src="/img/projects4.png" alt="">
-                <img src="/img/projects5.png" alt="">
-                <img src="/img/projects6.png" alt="">
+                <img src="/WWW.com/img/projects4.png" alt="">
+                <img src="/WWW.com/img/projects5.png" alt="">
+                <img src="/WWW.com/img/projects6.png" alt="">
             </div>
             <a href="" class="see-all">SEE ALL</a>
         </div>
+
+        <div class="container email">
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <div class="block">
+                <div>
+                    <h4>Stay in the loop</h4>
+                    <p>Subscribe to receive the latest news and updates about TDA.
+                    We promise not to spam you! </p>
+                </div>
+                <div>
+                    <input type= "email" id="emailField" placeholder="Enter email address">
+                    <button onclick="checkEmail()">Continue</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <footer>
+        <div class="block container">
+            <div>
+                <span class="logo">logo</span>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div>
+                <h4>About us</h4>
+                <ul>
+                    <li>Zeux</li>
+                    <li>Portfolio</li>
+                    <li>Careers</li>
+                    <li>Contact us</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Contact us</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p>+908 89097 890</p>
+            </div>
+        </div>
+        <hr>
+        <p>Copyright ® 2022 prodesigner All rights Rcerved</p>
+    </footer>
+    <script>
+        function checkEmail () {
+            let email = document.querySelector('#emailField').value;
+            if(!email.includes('@')) alert ('Нет символа @');
+            else if(!email.includes('.')) alert ('Нет символа .');
+            else alert('Все отлично!');
+        }
+    </script>
 </body>
 
 </html>
