--- a/WWW.com/Index.html
+++ b/WWW.com/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S_i_S</title>
-    <link rel="stylesheet" href="/WWW.com/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                 <button class="btn">Get more details</button>
             </div>
-            <img src="/WWW.com/img/joystick.svg" alt="">
+            <img src="img/joystick.svg" alt="">
         </div>
 
         <div class="container trending">
@@ -40,20 +40,20 @@
 
             <div class="games">
                 <div class="block">
-                    <img src="/WWW.com/img/game1.png" alt="">
-                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="img/game1.png" alt="">
+                    <span><img src="img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/WWW.com/img/game2.png" alt="">
-                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="img/game2.png" alt="">
+                    <span><img src="img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/WWW.com/img/game3.png" alt="">
-                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="img/game3.png" alt="">
+                    <span><img src="img/fire.svg" alt=""> 40 Followers</span>
                 </div>
                 <div class="block">
-                    <img src="/WWW.com/img/game4.png" alt="">
-                    <span><img src="/WWW.com/img/fire.svg" alt=""> 40 Followers</span>
+                    <img src="img/game4.png" alt="">
+                    <span><img src="img/fire.svg" alt=""> 40 Followers</span>
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="container banner">
             <h3>Lorem Ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-            <img src="/WWW.com/img/banner.png" alt="">
+            <img src="img/banner.png" alt="">
         </div>
     </div>
     
